--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -191,18 +191,18 @@ Then instructing MSBuild to include all `wwwroot\**\*` files when publishing the
 
 ```xml
 <PropertyGroup>
-    <CopyAllFilesToSingleFolderForMSDeployDependsOn>
-        IncludeFiles;
-        $(CopyAllFilesToSingleFolderForMSDeployDependsOn);
-    </CopyAllFilesToSingleFolderForMSDeployDependsOn>
+  <CopyAllFilesToSingleFolderForMSDeployDependsOn>
+    IncludeFiles;
+    $(CopyAllFilesToSingleFolderForMSDeployDependsOn);
+  </CopyAllFilesToSingleFolderForMSDeployDependsOn>
 </PropertyGroup>
 <Target Name="IncludeFiles">
-    <ItemGroup>
-        <PublishFiles Include="wwwroot\**\*" />
-        <FilesForPackagingFromProject Include="@(PublishFiles)">
-        <DestinationRelativePath>wwwroot\%(RecursiveDir)%(Filename)%(Extension)</DestinationRelativePath>
-        </FilesForPackagingFromProject>
-    </ItemGroup>
+<ItemGroup>
+  <PublishFiles Include="wwwroot\**\*" />
+  <FilesForPackagingFromProject Include="@(PublishFiles)">
+  <DestinationRelativePath>wwwroot\%(RecursiveDir)%(Filename)%(Extension)</DestinationRelativePath>
+  </FilesForPackagingFromProject>
+</ItemGroup>
 </Target>
 ```
 
@@ -625,7 +625,7 @@ SetConfig(new HostConfig {
     {"**/{int}", req => int.TryParse(req.PathInfo.LastRightPart('/'), out _) },
     {"**/{int}/path", req => {
         var beforeLast = req.PathInfo.LastLeftPart('/');
-        return !string.IsNullOrEmpty(beforeLast) && int.TryParse(beforeLast.LastRightPart('/'), out _);
+        return beforeLast != null && int.TryParse(beforeLast.LastRightPart('/'), out _);
     }},
  }
 })
@@ -839,7 +839,7 @@ The `MiniProfilerFeature` plugin needs to be registered before `ProfiledDbConnec
 Plugins.Add(new MiniProfilerFeature());
 
 container.Register<IDbConnectionFactory>(
-    c => new OrmLiteConnectionFactory("~/db.sqlite".MapHostAbsolutePath(), SqliteDialect.Provider) {
+    c => new OrmLiteConnectionFactory("~/db.sqlite".MapHostAbsolutePath(), SqliteDialect.Provider){
         ConnectionFilter = x => new ProfiledDbConnection(x, Profiler.Current)
     });
 
@@ -911,8 +911,8 @@ public class CustomValidationValidator : AbstractValidator<CustomValidation>
             .Custom((request, context) => {
                 if (request.Code?.StartsWith("X-") != true)
                 {
-                    var propertyName = context.ParentContext.PropertyChain.BuildPropertyName("Code");
-                    context.AddFailure(new ValidationFailure(propertyName, error:"Incorrect prefix") {
+                    var propName = context.ParentContext.PropertyChain.BuildPropertyName("Code");
+                    context.AddFailure(new ValidationFailure(propName, error:"Incorrect prefix") {
                         ErrorCode = "NotFound"
                     });
                 }
