--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -359,7 +359,7 @@ ENV ASPNETCORE_URLS http://*:5000
 ENTRYPOINT ["dotnet", "Chat.dll"]
 ```
 
-The smaller footprint required by the `aspnetcore` runtime reduced the footprint of [.NET Core Chat](https://github.com/NetCoreApps/Chat) from **567MB** to **126MB** whilst continuing to run flawlessly in AWS ECS at: http://chat.netcore.io
+The smaller footprint required by the `aspnetcore` runtime reduced the footprint of [.NET Core Chat](https://github.com/NetCoreApps/Chat) from **567MB** to **126MB** whilst continuing to run flawlessly in AWS ECS at [chat.netcore.io](http://chat.netcore.io).
 
 ### ServiceStack WebApps Updated
 
@@ -804,7 +804,7 @@ By contrast .NET Standard 2.0 builds can be treated like regular .dlls. The exis
 
 ### .NET Standard Client packages for .NET Framework Projects
 
-One difference from before was previously `ServiceStack.Interfaces.dll` was a single PCL .dll referenced by all .NET v4.5, .NET Core and PCL projects. It now contains .NET 4.5 and .NET Standard 2.0 build like the other packages. One consequence of this is that you wont be able to have binary coupling of your Server .NET Core `ServiceModel.dll` inside .NET Framework clients despite both referencing the same `ServiceStack.Client` NuGet package. For this reason we're continuing to publish `.Core` versions of the client packages:
+One difference from before was previously `ServiceStack.Interfaces.dll` was a single PCL .dll referenced by all .NET v4.5, .NET Core and PCL projects. It now contains .NET 4.5 and .NET Standard 2.0 build like all other packages. One consequence of this is that you wont be able to have binary coupling of your Server .NET Core `ServiceModel.dll` inside .NET Framework clients despite both referencing the same `ServiceStack.Client` NuGet package. For this reason we're continuing to publish `.Core` versions of the client packages:
 
  - ServiceStack.Text.Core
  - ServiceStack.Interfaces.Core
