--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -483,7 +483,7 @@ new AuthFeature {
 }
 ```
 
-Users that don't have Digest Auth Hashes will require logging in again in order to have it populates. If you don't intend to use Digest Auth you can clear the `DigestHa1Hash` column in your `UserAuth` table which is otherwise unused.
+Users that don't have Digest Auth Hashes will require logging in again in order to have it populated. If you don't intend to use Digest Auth you can clear the `DigestHa1Hash` column in your `UserAuth` table which is otherwise unused.
 
 ### JWT AuthProvider
 
