Add v5.0.2 Release Notes

--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -3,6 +3,497 @@ title: v5 Release Notes
 slug: v5-0-0
 ---
 
+# v5.0.2 Update
+
+Happy New 2018 All! We hope you've all had a long, relaxing break over the holidays and are re-energized for a productive start to the new year. As we expect most Customers will have held off upgrading to v5 until the start of the new year we wanted to get the latest release out before then so Customers can immediately upgrade to the best release available.
+
+## Future Versioning Scheme
+
+Historically ServiceStack releases are focused around "Major release schedules" published along with detailed Release Notes describing new features and changes added in each release. All packages are published together in "lockstep" with the same version number so the effort to upgrade ServiceStack projects can be done all at same time, with low frequency. 
+
+Whilst we want to minimize the effort for Customers to upgrade we also want to make any fixes or enhancements to the previous release available sooner as there are often fixes reported and resolved immediately after each release and made available in our [pre-release packages on MyGet](http://docs.servicestack.net/myget) that most Customers wont get until the next major Release on NuGet. 
+
+### Enhancement Releases
+
+To deliver updates sooner we're going to dedicate time immediately after each release to resolving issues and adding enhancements to existing features so we can publish update releases before starting work on new major features. Update releases will be primarily additive and minimally disruptive so they're safe to upgrade.
+
+To distinguish updates from normal releases we'll use the `{PATCH}` version to indicate an Enhancement Release and use the `{MINOR}` version for normal major releases:
+
+    {MAJOR}.{MINOR}.{PATCH}
+
+The `{MAJOR}` is reserved for Major releases like **v5** containing structural changes that may require changes to environment and/or project configurations. For **v5** these included:
+ 
+ - Merge `.Core` packages into main NuGet packages and upgrade to NuGet v3 nuspec
+ - Sign all `net45` .dll's and merge `.Signed` packages into main NuGet packages
+ - Upgrading to .NET Standard 2.0 and dropping PCL support
+ - Upgrading minimum .NET Framework version requirements for `ServiceStack.RabbitMq` and `ServiceStack.Azure`
+
+> Major structural releases should be few and far between with currently no plans for any in the immediate future.
+
+A new `{MINOR}` version will be used for normal "Major" releases which will have a `{PATCH}` version of **0**. An **even** `{PATCH}` version number indicates an "Update" release published to **NuGet** whilst an **odd** version number indicates a "pre-release" version that's only [available on MyGet](http://docs.servicestack.net/myget), e.g:
+
+  - **v5.0.0** - Current Major Release with structural changes
+    - v5.0.2 - Enhancement of Major v5.0.0 Release
+    - v5.0.3 - Pre-release packages published to MyGet only
+    - v5.0.4? - Enhancement of Major v5.0.0 Release (if any)
+  - **v5.1.0** - Next Major Release
+    - v5.1.1 - Pre-release packages published to MyGet only
+    - v5.1.2? - Enhancement of Major v5.1.0 Release (if any)
+  - ...
+  - **v6.0.0** - Next Major Release with structural changes
+
+## Run ASP.NET Core Apps on the .NET Framework
+
+A primary use-case affected from unifying the `.Core` packages into the main NuGet packages was being able to run ASP.NET Core Apps on the **.NET Framework** which stems from the 2 different builds contained in ServiceStack NuGet packages:
+
+  - `net45` - Contains support for running **ASP.NET** Web or Self-Hosting **HttpListener** App Hosts
+  - `netstandard2.0` - Contains support for only running on **ASP.NET Core** App Hosts
+
+With `net45` builds always used when installed in any **.NET Framework** project. To allow **.NET v4.6.1+** Clients from sharing .NET Standard 2.0 assemblies with .NET Core Servers we continued to publish [.Core Client packages](#net-standard-client-packages-for-net-framework-projects) but we were quickly made aware there's also several Customers who are creating ASP.NET Core Apps running on the .NET Framework in order to be able to use existing .NET Framework assemblies at the sacrifice of being able to run on the faster and multi platform **.NET Core 2.0** runtime.
+
+To support this use-case we're re-publishing `.Core` NuGet packages which contains only the **.NET Standard 2.0** builds in order to force .NET Framework projects to use **.NET Standard 2.0** builds which contains support for running ASP.NET Core Apps. Currently the complete list of `.Core` packages which contains **.NET Standard 2.0** builds include:
+
+ - ServiceStack.Text.Core
+ - ServiceStack.Interfaces.Core
+ - ServiceStack.Client.Core
+ - ServiceStack.HttpClient.Core
+ - ServiceStack.Core
+ - ServiceStack.Common.Core
+ - ServiceStack.Mvc.Core
+ - ServiceStack.Server.Core
+ - ServiceStack.Redis.Core
+ - ServiceStack.OrmLite.Core
+ - ServiceStack.OrmLite.Sqlite.Core
+ - ServiceStack.OrmLite.SqlServer.Core
+ - ServiceStack.OrmLite.PostgreSQL.Core
+ - ServiceStack.OrmLite.MySql.Core
+ - ServiceStack.OrmLite.MySqlConnector.Core
+ - ServiceStack.Aws.Core
+ - ServiceStack.Azure.Core
+ - ServiceStack.RabbitMq.Core
+ - ServiceStack.Api.OpenApi.Core
+ - ServiceStack.Admin.Core
+ - ServiceStack.Stripe.Core
+ - ServiceStack.Kestrel
+
+Ultimately support for whether a **.NET Standard 2.0** library will run on the .NET Framework depends on whether external dependencies also support this scenario which as it's a more niche use-case, will be a less tested scenario. 
+
+There are also other inconsistencies like not being able to reference the [Microsoft.AspNetCore.All](https://www.nuget.org/packages/Microsoft.AspNetCore.All) meta package which only supports .NET Core 2.0 projects, instead you would need to reference the packages individually. To make it as easy possible to get started we've created a new [NetFrameworkCoreTemplates](https://github.com/NetFrameworkCoreTemplates) GitHub Organization containing popular starting templates for running ASP.NET Core Apps on .NET Framework (default v4.7) which as a convention all have the `-corefx` suffix: 
+
+ - [web-corefx](https://github.com/NetFrameworkCoreTemplates/web-corefx) - .NET Framework ASP.NET Core Website
+ - [selfhost-corefx](https://github.com/NetFrameworkCoreTemplates/selfhost-corefx) - .NET Framework ASP.NET Core self-hosting Console App
+ - [mvc-corefx](https://github.com/NetFrameworkCoreTemplates/mvc-corefx) - .NET Framework ASP.NET Core MVC Website
+ - [razor-corefx](https://github.com/NetFrameworkCoreTemplates/razor-corefx) - .NET Framework ASP.NET Core Website with ServiceStack.Razor
+ - [templates-corefx](https://github.com/NetFrameworkCoreTemplates/templates-corefx) - .NET Framework ASP.NET Core Templates Bootstrap Website
+
+The latest `@servicestack/cli` **v1.0.2** has been updated to include this additional config source, including them in the list of available templates:
+
+    $ dotnet-new
+
+![](http://docs.servicestack.net/images/ssvs/dotnet-new-list.png)
+
+Which will let you create an ASP.NET Core App running on the .NET Framework v4.7 with:
+
+    $ npm install -g @servicestack/cli
+
+    $ dotnet-new web-corefx AcmeNetFx
+
+Which can then be opened in your preferred VS.NET or Project Rider C# IDE.
+
+## ServiceStack Mobile and Desktop Apps
+
+[![](https://raw.githubusercontent.com/ServiceStackApps/HelloMobile/master/screenshots/splash-900.png)](https://github.com/ServiceStackApps/HelloMobile)
+
+The [HelloMobile](https://github.com/ServiceStackApps/HelloMobile) project has been rewritten to use the latest v5 .NET Standard 2.0 and .NET Framework clients and contains multiple versions of the same App demonstrating a number of different calling conventions, service integrations and reuse possibilities for each of the following platforms:
+
+ - WPF
+ - UWP
+ - Xamarin.Android
+ - Xamarin.iOS
+ - Xamarin.OSX
+ - Xamarin.Forms
+   - iOS
+   - Android
+   - UWP
+
+### ServiceStack Server App
+
+Each App calls the same simple ServiceStack Server [WebServices.cs](https://github.com/ServiceStackApps/HelloMobile/blob/master/src/Server.Common/WebServices.cs) implementation that thanks to ServiceStack's versatility, can be hosted on any of .NET's popular HTTP Server hosting configurations:
+
+### [Server.NetCore](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Server.NetCore)
+
+The AppHost for hosting the ServiceStack Services in a ASP.NET Core 2.0 App:
+
+```csharp
+public class AppHost : AppHostBase
+{
+    public AppHost() : base(nameof(Server.NetCore), typeof(WebServices).Assembly) { }
+    public override void Configure(Container container) => SharedAppHost.Configure(this);
+}
+```
+
+### [Server.NetCoreFx](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Server.NetCoreFx)
+
+The same source code can be used to run a ServiceStack ASP.NET Core App on the **.NET Framework**:
+
+```csharp
+public class AppHost : AppHostBase
+{
+    public AppHost() : base(nameof(Server.NetCoreFx), typeof(WebServices).Assembly) { }
+    public override void Configure(Container container) => SharedAppHost.Configure(this);
+}
+```
+
+The difference between a **.NET Framework v4.7** and a **.NET Core 2.0** ASP.NET Core App is in [Server.NetCoreFx.csproj](https://github.com/ServiceStackApps/HelloMobile/blob/master/src/Server.NetCoreFx/Server.NetCoreFx.csproj) where it references **ServiceStack.Core** NuGet package to force using the **.NET Standard 2.0** version of ServiceStack that contains the support for hosting ASP.NET Core Apps.
+
+### [Server.AspNet](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Server.AspNet)
+
+The same source code is also used for hosting classic ASP.NET Web Applications:
+
+```csharp
+public class AppHost : AppHostBase
+{
+    public AppHost() : base(nameof(Server.AspNet), typeof(WebServices).Assembly) { }
+    public override void Configure(Container container) => SharedAppHost.Configure(this);
+}
+```
+
+### [Server.HttpListener](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Server.HttpListener)
+
+Alternatively to host in a .NET Framework Self-Hosting HttpListener, the AppHost needs to inherit from `AppSelfHostBase`:
+
+```csharp
+public class AppHost : AppSelfHostBase
+{
+    public AppHost() : base(nameof(Server.HttpListener), typeof(WebServices).Assembly) {}
+    public override void Configure(Container container) => SharedAppHost.Configure(this);
+}
+```
+
+### Shared ServiceStack Services
+
+All AppHost's above are configured to run the same Web Services implementation below:
+
+```csharp
+public static class SharedAppHost
+{
+    public static void Configure(IAppHost appHost)
+    {
+        appHost.Config.DefaultRedirectPath = "/metadata";
+
+        appHost.Plugins.Add(new CorsFeature());
+
+        appHost.Plugins.Add(new AuthFeature(() => new AuthUserSession(),
+            new IAuthProvider[] {
+                new CustomCredentialsAuthProvider(),
+                new JwtAuthProvider
+                {
+                    AuthKeyBase64 = Config.JwtAuthKeyBase64,
+                    RequireSecureConnection = false,
+                },
+            }));
+
+        appHost.Plugins.Add(new EncryptedMessagesFeature
+        {
+            PrivateKeyXml = Config.PrivateKeyXml
+        });
+    }
+
+    public class CustomCredentialsAuthProvider : CredentialsAuthProvider
+    {
+        public override bool TryAuthenticate(IServiceBase authService, string userName, string password)
+        {
+            return userName == "user" && password == "pass";
+        }
+    }
+}
+
+public class WebServices : Service
+{
+    public object Any(Hello request) => new HelloResponse { Result = "Hello, " + request.Name };
+}
+
+[Authenticate]
+public class AuthServices : Service
+{
+    public object Any(HelloAuth request)
+    {
+        return new HelloResponse { Result = "Hello, " + request.Name };
+    }
+}
+```
+
+Which are all configured to listen on the same **http://localhost:5000** address.
+
+## Client Apps
+
+Once the server is running you can run any of the included Client Apps by selecting it as the **StartUp Project** in the context menu and running it with `Ctrl+F5`.
+
+Each of the Client Apps have the same functionality demonstrating a number of popular use-cases scenarios for accessing ServiceStack Services. Whilst the event handler registrations in each App can vary, the source code used to call ServiceStack Services remains the same with all calls following the same approach to call Services by sending a populated Request DTOs in the **ServiceModel.dll**, sent utilizing different APIs and features built into ServiceStack's Service Clients.
+
+### [WPF](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.Wpf)
+
+[![](https://raw.githubusercontent.com/ServiceStackApps/HelloMobile/master/screenshots/wpf.png)](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.Wpf)
+
+Here is WPF's complete [MainWindow.xaml.cs](https://github.com/ServiceStackApps/HelloMobile/blob/master/src/Client.Wpf/MainWindow.xaml.cs) implementation below:
+
+```csharp
+public partial class MainWindow : Window
+{
+    public MainWindow()
+    {
+        InitializeComponent();
+    }
+
+    private const string BaseUrl = Config.BaseUrl;
+    public IServiceClient CreateClient() => new JsonServiceClient(BaseUrl);
+
+    private void btnSync_Click(object sender, RoutedEventArgs e)
+    {
+        try
+        {
+            var client = CreateClient();
+            var response = client.Get(new Hello { Name = "Sync" });
+            lblResults.Text = response.Result;
+        }
+        catch (Exception ex)
+        {
+            lblResults.Text = ex.ToString();
+        }
+    }
+
+    private async void btnAsync_Click(object sender, RoutedEventArgs e)
+    {
+        try
+        {
+            var client = CreateClient();
+            var response = await client.GetAsync(new Hello { Name = "Async" });
+            lblResults.Text = response.Result;
+        }
+        catch (Exception ex)
+        {
+            lblResults.Text = ex.ToString();
+        }
+    }
+
+    private async void btnGateway_Click(object sender, RoutedEventArgs e)
+    {
+        try
+        {
+            var gateway = new SharedGateway(BaseUrl);
+            var greeting = await gateway.SayHello("Gateway");
+            lblResults.Text = greeting;
+        }
+        catch (Exception ex)
+        {
+            lblResults.Text = ex.ToString();
+        }
+    }
+
+    private async void btnAuth_Click(object sender, RoutedEventArgs e)
+    {
+        try
+        {
+            var client = CreateClient();
+            await client.PostAsync(new Authenticate
+            {
+                provider = "credentials",
+                UserName = "user",
+                Password = "pass",
+            });
+
+            var response = await client.GetAsync(new HelloAuth { Name = "Auth" });
+
+            lblResults.Text = response.Result;
+        }
+        catch (Exception ex)
+        {
+            lblResults.Text = ex.ToString();
+        }
+    }
+
+    private async void btnJwt_Click(object sender, RoutedEventArgs e)
+    {
+        try
+        {
+            var authClient = CreateClient();
+            var authResponse = await authClient.PostAsync(new Authenticate
+            {
+                provider = "credentials",
+                UserName = "user",
+                Password = "pass",
+            });
+
+            var client = new JsonServiceClient(BaseUrl)
+            {
+                BearerToken = authResponse.BearerToken //JWT
+            };
+
+            var response = await client.GetAsync(new HelloAuth { Name = "JWT Auth" });
+
+            lblResults.Text = response.Result;
+        }
+        catch (Exception ex)
+        {
+            lblResults.Text = ex.ToString();
+        }
+    }
+
+    private async void btnEncrypted_Click(object sender, RoutedEventArgs e)
+    {
+        try
+        {
+            var client = (IJsonServiceClient)CreateClient();
+            var encryptedClient = client.GetEncryptedClient(Config.PublicKeyXml);
+
+            var response = await encryptedClient.SendAsync(new Hello { Name = "Encrypted Client" });
+
+            lblResults.Text = response.Result;
+        }
+        catch (Exception ex)
+        {
+            lblResults.Text = ex.ToString();
+        }
+    }
+}
+```
+
+### [UWP](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.UWP)
+
+[![](https://raw.githubusercontent.com/ServiceStackApps/HelloMobile/master/screenshots/uwp.png)](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.UWP)
+
+### [Xamarin.Android](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.Android)
+
+[![](https://raw.githubusercontent.com/ServiceStackApps/HelloMobile/master/screenshots/android.png)](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.Android)
+
+### [Xamarin.iOS](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.iOS)
+
+[![](https://raw.githubusercontent.com/ServiceStackApps/HelloMobile/master/screenshots/ios.png)](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.iOS)
+
+### [OSX](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.OSX)
+
+[![](https://raw.githubusercontent.com/ServiceStackApps/HelloMobile/master/screenshots/osx.png)](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.OSX)
+
+### Xamarin.Forms
+
+Xamarin.Forms enables maximum reuse possible in C# Apps by letting you develop and share a Single UI across all your Apps.
+
+![](https://raw.githubusercontent.com/ServiceStackApps/HelloMobile/master/screenshots/xamarin.forms-reuse.png)
+
+For Basic Apps with Simple UI's like this no specialization was needed as you can define both the UI and its complete implementation in a shared [Client.XamarinForms](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.XamarinForms/Client.XamarinForms) project using an Xamarin.Forms [MainPage.xaml](https://github.com/ServiceStackApps/HelloMobile/blob/master/src/Client.XamarinForms/Client.XamarinForms/MainPage.xaml) markup to develop its UI using an XAML dialect that closely resembles the XAML used in UWP and WPF Apps:
+
+```xml
+<Grid Margin="10,20,0,100">
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+        <RowDefinition Height="50" />
+        <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
+
+    <StackLayout Grid.Row="0" Orientation="Horizontal">
+        <Button x:Name="btnSync" Text="Sync" />
+        <Button x:Name="btnAsync" Text="Async" />
+        <Button x:Name="btnGateway" Text="Gateway" />
+        <Button x:Name="btnAuth" Text="Auth" />
+        <Button x:Name="btnJwt" Text="JWT" />
+        <Button x:Name="btnEncrypted" Text="Encrypted" />
+    </StackLayout>
+
+    <Label Grid.Row="1" x:Name="lblResults" Text="" FontSize="36"
+           HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
+
+</Grid>
+```
+
+### [XamarinForms iOS](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.XamarinForms/Client.XamarinForms.iOS)
+
+[![](https://raw.githubusercontent.com/ServiceStackApps/HelloMobile/master/screenshots/xamarinforms.ios.png)](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.XamarinForms/Client.XamarinForms.iOS)
+
+### [XamarinForms UWP](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.XamarinForms/Client.XamarinForms.UWP)
+
+[![](https://raw.githubusercontent.com/ServiceStackApps/HelloMobile/master/screenshots/xamarinforms.uwp.png)](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.XamarinForms/Client.XamarinForms.UWP)
+
+### [XamarinForms Android](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.XamarinForms/Client.XamarinForms.Android)
+
+[![](https://raw.githubusercontent.com/ServiceStackApps/HelloMobile/master/screenshots/xamarinforms.android.png)](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.XamarinForms/Client.XamarinForms.Android)
+
+## Async Error Handling
+
+This is an enhancement to our [Expanded Async Support](#expanded-async-support) where there's now the option to register async exception handlers, e.g:
+
+```csharp
+this.ServiceExceptionHandlersAsync.Add(async (httpReq, request, ex) =>
+{
+    await LogServiceExceptionAsync(httpReq, request, ex);
+
+    if (ex is UnhandledException)
+        throw ex;
+
+    if (request is IQueryDb)
+        return DtoUtils.CreateErrorResponse(request, new ArgumentException("AutoQuery request failed"));
+
+    return null;
+});
+
+this.UncaughtExceptionHandlersAsync.Add(async (req, res, operationName, ex) =>
+{
+    await res.WriteAsync($"UncaughtException '{ex.GetType().Name}' at '{req.PathInfo}'");
+    res.EndRequest(skipHeaders: true);
+});
+```
+
+If you were instead inheriting `OnServiceException` or `OnUncaughtException` in your AppHost they now return a `Task` type.
+
+## AutoQuery DISTINCT
+
+AutoQuery added support querying DISTINCT fields by prefixing the custom fields list with `DISTINCT `, e.g. `DISTINCT Field1,Field2`.
+
+We can use this feature with Northwinds existing [AutoQuery Request DTOs](https://github.com/NetCoreApps/Northwind/blob/master/src/Northwind.ServiceModel/AutoQuery.cs):
+
+```csharp
+[Route("/query/customers")]
+public class QueryCustomers : QueryDb<Customer> { }
+```
+
+To return all unique City and Countries of Northwind Customers with:
+
+ - [northwind.netcore.io/query/customers?Fields=DISTINCT City,Country](http://northwind.netcore.io/query/customers?Fields=DISTINCT%20City,Country)
+
+Or to just return their unique Countries they're in:
+
+ - [northwind.netcore.io/query/customers?Fields=DISTINCT Country](http://northwind.netcore.io/query/customers?Fields=DISTINCT%20Country)
+
+### OrmLite commandFilter
+
+An optional `Func<IDbCommand> commandFilter` has been added to OrmLite's `INSERT` and `UPDATE` APIs to allow customization and inspection of the populated `IDbCommand` before it's run. This feature is utilized in the new [Conflict Resolution Extension methods](https://github.com/ServiceStack/ServiceStack.OrmLite/blob/master/src/ServiceStack.OrmLite/OrmLiteConflictResolutions.cs) where you can specify the conflict resolution strategy when a Primary Key or Unique constraint violation occurs:
+
+```csharp
+db.InsertAll(rows, dbCmd => dbCmd.OnConflictIgnore());
+
+//Equivalent to: 
+db.InsertAll(rows, dbCmd => dbCmd.OnConflict(ConflictResolution.Ignore));
+```
+
+In this case it will ignore any conflicts that occurs and continue inserting the remaining rows in SQLite, MySql and PostgreSQL, whilst in SQL Server it's a NOOP.
+
+SQLite offers [additional fine-grained behavior](https://sqlite.org/lang_conflict.html) that can be specified for when a conflict occurs:
+
+ - ROLLBACK
+ - ABORT
+ - FAIL
+ - IGNORE
+ - REPLACE
+
+### ServiceStack.Text
+
+The `XmlSerializer.XmlWriterSettings` and `XmlSerializer.XmlReaderSettings` for controlling the default XML behavior is now publicly accessible with [DTD Processing now disabled by default](https://msdn.microsoft.com/en-us/magazine/ee335713.aspx).
+
+Support for leading zeros in integers was restored.
+ 
+# v5 Release Notes
+
 The theme of this major v5 release is integration and unification with the newly released .NET Standard 2.0 which offers the broadest compatibility and stabilized API surface for .NET Core and the version we've chosen to standardize around.
 
 To this end we've upgraded all existing .NET Standard builds to **.NET Standard 2.0**, all .NET Core Apps and Test projects to **.NET Core 2.0** and merged our .NET Standard `.Core` NuGet packages into the main ServiceStack NuGet packages - unifying them into a single suite of NuGet packages and release cadence.
