--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -3,7 +3,7 @@ title: v5 Release Notes
 slug: v5-0-0
 ---
 
-# v5.0.2 Update
+## v5.0.2 Update
 
 Happy New 2018 All! We hope you've all had a long, relaxing break over the holidays and are re-energized for a productive start to the new year. As we expect most Customers will have held off upgrading to v5 until the start of the new year we wanted to get the latest release out before then so Customers can immediately upgrade to the best release available.
 
