add notes on logging providers

--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -419,6 +419,13 @@ For Basic Apps with Simple UI's like this no specialization was needed as you ca
 
 [![](https://raw.githubusercontent.com/ServiceStackApps/HelloMobile/master/screenshots/xamarinforms.android.png)](https://github.com/ServiceStackApps/HelloMobile/tree/master/src/Client.XamarinForms/Client.XamarinForms.Android)
 
+## .NET Standard 2.0 Logging Providers
+
+Whilst our recommendation is to use [.NET Core's Logging Abstraction](/netcore#servicestacklogging-adapters) some Customers prefer to avoid this abstraction and configure logging directly with ServiceStack. To support this we've included **.NET Standard 2.0** builds to the following logging providers:
+
+ - ServiceStack.Logging.Serilog
+ - ServiceStack.Logging.Slack
+
 ## Async Error Handling
 
 This is an enhancement to our [Expanded Async Support](#expanded-async-support) where there's now the option to register async exception handlers, e.g:
