Update DISTINCT examples

--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -455,7 +455,17 @@ If you were instead inheriting `OnServiceException` or `OnUncaughtException` in 
 
 ## AutoQuery DISTINCT
 
-AutoQuery added support querying DISTINCT fields by prefixing the custom fields list with `DISTINCT `, e.g. `DISTINCT Field1,Field2`.
+AutoQuery added support querying DISTINCT fields by prefixing the custom fields list with `DISTINCT `, example using QueryString:
+
+    ?Fields=DISTINCT Field1,Field2
+
+Examle using C# Client:
+
+```csharp
+var response = client.Get(new QueryCustomers { 
+    Fields = "DISTINCT Country"
+})
+```
 
 We can use this feature with Northwinds existing [AutoQuery Request DTOs](https://github.com/NetCoreApps/Northwind/blob/master/src/Northwind.ServiceModel/AutoQuery.cs):
 
