--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -49,7 +49,7 @@ A primary use-case affected from unifying the `.Core` packages into the main NuG
   - `net45` - Contains support for running **ASP.NET** Web or Self-Hosting **HttpListener** App Hosts
   - `netstandard2.0` - Contains support for only running on **ASP.NET Core** App Hosts
 
-With `net45` builds always used when installed in any **.NET Framework** project. To allow **.NET v4.6.1+** Clients from sharing .NET Standard 2.0 assemblies with .NET Core Servers we continued to publish [.Core Client packages](#net-standard-client-packages-for-net-framework-projects) but we were quickly made aware there's also several Customers who are creating ASP.NET Core Apps running on the .NET Framework in order to be able to use existing .NET Framework assemblies at the sacrifice of being able to run on the faster and multi platform **.NET Core 2.0** runtime.
+Where the `net45` builds always get used when they're added to any **.NET Framework** project. To allow **.NET v4.6.1+** Clients to share .NET Standard 2.0 assemblies with .NET Core Servers we continued to publish [.Core Client packages](#net-standard-client-packages-for-net-framework-projects) but we were also quickly made aware there's several Customers who prefer to create ASP.NET Core Apps running on the .NET Framework in order to be able to use existing .NET Framework assemblies at the expense of not being able to run on the faster and multi platform **.NET Core 2.0** runtime.
 
 To support this use-case we're re-publishing `.Core` NuGet packages which contains only the **.NET Standard 2.0** builds in order to force .NET Framework projects to use **.NET Standard 2.0** builds which contains support for running ASP.NET Core Apps. Currently the complete list of `.Core` packages which contains **.NET Standard 2.0** builds include:
 
