--- a/docs/_releases/v4.5.2.md
+++ b/docs/_releases/v4.5.2.md
@@ -3,6 +3,8 @@ title: v4.5.2 Release Notes
 slug: v4-5-2
 ---
 
+> See [.NET Core Documentation](http://docs.servicestack.net/netcore) for the latest information on ServiceStack's .NET Core support.
+
 ![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/release-notes/netcore-banner.png?t)
 
 ## ServiceStack now available on .NET Core!
@@ -87,7 +89,7 @@ listed them side-by-side with their original ASP.NET 4.5 code-bases so they can 
 
 The Live Demos cover a broad spectrum of ServiceStack features including:
 
-<table>
+<table class="table">
 <tr>
   <td colspan="2">
     <b>Redis GEO</b> - simple example showing how to make use of Redis 3.2.0 new GEO features
