--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -1086,7 +1086,7 @@ text //= foo
 
  - The new `ClientConfig.SkipEmptyArrays` option can be used to ignore empty arrays when generating urls
 
-## AutoQuery
+## AutoQuery Changes
 
 Previously all AutoQuery Requests would execute an additional Aggregate query to return the total records available for that query.
 As this can be unnecessary overhead for requests that don't need it, we've made it opt-in where requests that need the total can add it on the QueryString, e.g:
