Add table class

--- a/docs/_releases/v4.0.33.md
+++ b/docs/_releases/v4.0.33.md
@@ -159,7 +159,7 @@ Some examples of supported formats:
 
 Any additional configuration can be specified as QueryString parameters. The full list of options that can be specified include:
 
-<table>
+<table class="table">
     <tr>
         <td><b>Ssl</b></td>
         <td>bool</td>
