--- a/docs/_releases/v4.0.44.md
+++ b/docs/_releases/v4.0.44.md
@@ -86,7 +86,7 @@ Auto Retry feature).
 Whilst the above covers the popular Sentinel configuration that would typically be used, nearly every aspect
 of `RedisSentinel` behavior is customizable with the configuration below:
 
-<table>
+<table class="table">
     <tr>
         <td><b>OnSentinelMessageReceived</b></td><td>Fired when the Sentinel worker receives a message from the Sentinel Subscription</td>
     </tr>
@@ -258,7 +258,7 @@ The new
 [RedisStats](https://github.com/ServiceStack/ServiceStack.Redis/blob/master/src/ServiceStack.Redis/RedisStats.cs) 
 class provides better visibility and introspection into your running instances:
 
-<table>
+<table class="table">
     <tr>
         <td><b>TotalCommandsSent</b></td> <td>Total number of commands sent</td>
     </tr>
