--- a/docs/_releases/v4.0.54.md
+++ b/docs/_releases/v4.0.54.md
@@ -704,7 +704,7 @@ value in which case they will be set to `false`, e.g:
 
 For a quick reference the following **bool** customizations are supported:
 
-<table>
+<table class="table">
     <thead>
         <tr><th>Name</th><th>Alias</th></tr>
     </thead>
