--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -594,7 +594,7 @@ this.http.get<HelloResponse>(createUrl('/hello/{Name}', { name })).subscribe(r =
 
 All Single Page App Templates are available for both .NET Core 2.0 and ASP.NET Framework projects which can be live-previewed and used to create new projects using the template names below:
 
-<table>
+<table class="table">
 <tr>
     <th>.NET Core 2.0</th>
     <th>.NET Framework</th>
@@ -734,7 +734,7 @@ The `templates` Project Template is configured to develop Websites using [Servic
 
 Both `razor` and `templates` project enjoy Hot Reloading where in development a long poll is used to detect and reload changes in the current Template Page or static files in `/wwwroot`.
 
-<table>
+<table class="table">
 <tr>
     <th>.NET Core 2.0</th>
     <th>.NET Framework</th>
@@ -773,7 +773,7 @@ Both `razor` and `templates` project enjoy Hot Reloading where in development a 
 
 Those who prefer starting from an Empty slate can use the `web` template to create the minimal configuration for a Web Application whilst the `selfhost` template can be used to develop Self-Hosting Console Apps. Both templates still follow our recommended physical project layout but are configured with the minimum number of dependencies, e.g. the `selfhost` Console App just has a dependency on [Microsoft.AspNetCore.Server.Kestrel and ServiceStack](https://github.com/NetCoreTemplates/selfhost/blob/f11b25e80752d1fee96ac904a8df07fb150ee746/MyApp/MyApp.csproj#L11-L12), in contrast most templates have a dependency on the all-encompasing `Microsoft.AspNetCore.All` meta package.
 
-<table>
+<table class="table">
 <tr>
     <th>.NET Core 2.0</th>
     <th>.NET Framework</th>
@@ -803,7 +803,7 @@ Those who prefer starting from an Empty slate can use the `web` template to crea
 
 The only .NET Core 2.0 project template not to have a .NET Framework equivalent is [templates-webapp](https://github.com/NetCoreTemplates/templates-webapp) as it's a pre-built .NET Core 2.0 App that dramatically simplifies .NET Wep App development by enabling Websites and APIs to be developed instantly without compilation.
 
-<table>
+<table class="table">
 <tr>
     <th>.NET Core 2.0</th>
     <th>ServiceStack Templates WebApp</th>
@@ -823,7 +823,7 @@ See [templates.servicestack.net/docs/web-apps](http://templates.servicestack.net
 
 Likewise there are 2 .NET Framework Templates without .NET Core 2.0 equivalents as they contain Windows-only .NET Framework dependencies. This includes our React Desktop Template which supports packaging your Web App into 4 different ASP.NET, Winforms, OSX Cocoa and cross-platform Console App Hosts:
 
-<table>
+<table class="table">
 <tr>
     <th>.NET Framework</th>
     <th>React Desktop Apps Template</th>
