--- a/docs/_releases/v4.0.19.md
+++ b/docs/_releases/v4.0.19.md
@@ -152,7 +152,7 @@ Here are some examples using the example definition below:
 public class GetContact { ... }
 ```
 
-<table>
+<table class="table">
 <tr>
     <td><b>/postman?label=type</b></td>
     <td>GetContact</td>
